--- a/pdt/templates/rest_framework/api.html
+++ b/pdt/templates/rest_framework/api.html
@@ -1,5 +1,13 @@
 {% extends "rest_framework/base.html" %}
 {% load i18n %}
+{% block style %}
+    {{ block.super }}
+    <link rel="icon" href="{{ STATIC_URL }}core/icons/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="{{ STATIC_URL }}core/icons/favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="{{ STATIC_URL }}core/icons/touch57.png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="{{ STATIC_URL }}core/icons/touch72.png" />
+    <link rel="apple-touch-icon" sizes="114x114" href="{{ STATIC_URL }}core/icons/touch114.png" />
+{% endblock %}
 {% block branding %}
     <a class="navbar-brand" rel="nofollow" href="/api">
         <img width="120px" src="{{ STATIC_URL }}core/img/logo.png" />
