--- a/pdt/templates/admin/release_notes.html
+++ b/pdt/templates/admin/release_notes.html
@@ -1,8 +1,9 @@
 <html>
 <head>
-    <title>Release notes {{release.number}}</title>
+    <title>Release notes {{ release.number }}</title>
 </head>
 <body>
+<h1>Release notes {{ release.number }}</h1>
 {% for category in categories %}
     <strong>{{ category.title }}:</strong>
         <br />
