--- a/pdt/templates/admin/release_notes.html
+++ b/pdt/templates/admin/release_notes.html
@@ -9,7 +9,7 @@
         {% for case in category.cases %}
             {% if case.unmerged %}<span style="text-decoration: line-through">{% endif %}
             {% if case.late %}<u>{% endif %}
-            <a href="https://case.paylogic.eu/fogbugz/?{number}">Case {{ case.id }}</a> - {{ case.title }}
+            <a href="https://case.paylogic.eu/fogbugz/?{{ case.number }}">Case {{ case.id }}</a> - {{ case.title }}
             {% if case.late %}</u>{% endif %}
             {% if case.unmerged %}</span>{% endif %}
             <br />
