refactor unmerged case tags settings

--- a/pdt/templates/admin/release_notes.html
+++ b/pdt/templates/admin/release_notes.html
@@ -3,18 +3,25 @@
     <title>Release notes {{ release.number }}</title>
 </head>
 <body>
+    <h1>Release notes {{ release.number }}</h1>
+    <div style="font-style: italic">
+        Release {{ release.number }} is expected to go live on {{ release.datetime|date:"M d Y" }}.
+        {{ release.description | safe }}
+    </div>
 {% for category in categories %}
+    {% if category.cases %}
     <strong>{{ category.title }}:</strong>
         <br />
         {% for case in category.cases %}
             {% if case.unmerged %}<span style="text-decoration: line-through">{% endif %}
-            {% if case.late %}<u>{% endif %}
-            <a href="https://case.paylogic.eu/fogbugz/?{{ case.number }}">Case {{ case.id }}</a> - {{ case.title }}
-            {% if case.late %}</u>{% endif %}
+            <a target="_blank" href="https://case.paylogic.eu/fogbugz/default.asp?{{ case.id }}">
+                Case {{ case.id }}
+            </a> - {{ case.title }}
             {% if case.unmerged %}</span>{% endif %}
             <br />
         {% endfor %}
     <br />
+    {% endif %}
 {% endfor %}
 </body>
 </html>
