--- a/pdt/templates/admin/release_notes_overview.html
+++ b/pdt/templates/admin/release_notes_overview.html
@@ -30,7 +30,7 @@ Here are some hints about how to read this document:
         </ul>
     <li>
         The release notes are maintained by the Operational IT team, so if you have comments or suggestions feel
-        free to contact them.
+        free to <a href="mailto:operational-it@paylogic.com">contact them</a>.
     </li>
 </ul>
     {% for release in notes %}
