--- a/pdt/templates/admin/core/release_notes.html
+++ b/pdt/templates/admin/core/release_notes.html
@@ -14,9 +14,7 @@
         <br />
         {% for case in category.cases %}
             {% if case.unmerged %}<span style="text-decoration: line-through">{% endif %}
-            <a target="_blank" href="https://case.paylogic.eu/fogbugz/default.asp?{{ case.id }}">
-                Case {{ case.id }}
-            </a> - {{ case.title }}
+            <a target="_blank" href="https://case.paylogic.eu/fogbugz/?{{ case.id }}">Case {{ case.id }}</a> - {{ case.title }}
             {% if case.unmerged %}</span>{% endif %}
             <br />
         {% endfor %}
