prepare for opensourcing

--- a/pdt/templates/admin/core/release_notes/overview.html
+++ b/pdt/templates/admin/core/release_notes/overview.html
@@ -1,14 +1,14 @@
 {% extends "admin/core/release_notes/base.html" %}
 {% load i18n %}
 {% block content %}
-    <h2>Paylogic Platform</h2>
+    <h2>{% trans "Paylogic Platform" %}</h2>
 
-    <h3>How to read this document</h3>
-    Here are some hints about how to read this document:
+    <h3>{% trans "How to read this document" %}</h3>
+    {% trans "Here are some hints about how to read this document:" %}
     <ul class="nested-list">
-        <li>Every release has a note about when it’s expected to go live.</li>
+        <li>{% trans "Every release has a note about when it’s expected to go live."</li>
         <li>
-            Cases are spread out over categories, these should be fairly self explanatory:
+            {% trans "Cases are spread out over categories, these should be fairly self explanatory:" %}
             <ul>
                 {% for category in categories %}
                     <li>{{ category.title }}</li>
@@ -16,23 +16,23 @@
             </ul>
         </li>
         <li>
-            Changes that are made after the release notes were initially written and communicated are marked as such to
-            avoid confusion:
+            {% trans "Changes that are made after the release notes were initially written and communicated are marked as such to
+            avoid confusion:" %}
             <ul>
                 <li>
-                    If a case is marked underlined it was added to the release
-                    (after the release initially went to staging).
+                    {% trans "If a case is marked underlined it was added to the release
+                    (after the release initially went to staging)." %}
                 </li>
-                <li>If a case is marked strike through it has been removed from the release.</li>
+                <li>{% trans "If a case is marked strike through it has been removed from the release." %}</li>
             </ul>
         <li>
-            The release notes are maintained by the Operational IT team, so if you have comments or suggestions feel
-            free to <a href="mailto:operational-it@paylogic.com">contact them</a>.
+            {% trans "The release notes are maintained by the Operational IT team, so if you have comments or suggestions feel
+            free to <a href="mailto:operational-it@paylogic.com">contact them</a>." %}
         </li>
     </ul>
     <br>
     {% for release, note in notes %}
-        <h3><a href="#{{ release.number }}">Release {{ release.number }}</a></h3>
+        <h3><a href="#{{ release.number }}">{% blocktrans %}Release {{ release.number }}{% endblocktrans %}</a></h3>
         {{ note | safe }}
     {% endfor %}
 {% endblock %}
