correctly set up i18n

--- a/pdt/templates/admin/core/release_notes/overview.html
+++ b/pdt/templates/admin/core/release_notes/overview.html
@@ -6,7 +6,7 @@
     <h3>{% trans "How to read this document" %}</h3>
     {% trans "Here are some hints about how to read this document:" %}
     <ul class="nested-list">
-        <li>{% trans "Every release has a note about when it’s expected to go live."</li>
+        <li>{% trans "Every release has a note about when it’s expected to go live." %}</li>
         <li>
             {% trans "Cases are spread out over categories, these should be fairly self explanatory:" %}
             <ul>
@@ -16,18 +16,15 @@
             </ul>
         </li>
         <li>
-            {% trans "Changes that are made after the release notes were initially written and communicated are marked as such to
-            avoid confusion:" %}
+            {% trans "Changes that are made after the release notes were initially written and communicated are marked as such to avoid confusion:" %}
             <ul>
                 <li>
-                    {% trans "If a case is marked underlined it was added to the release
-                    (after the release initially went to staging)." %}
+                    {% trans "If a case is marked underlined it was added to the release (after the release initially went to staging)." %}
                 </li>
                 <li>{% trans "If a case is marked strike through it has been removed from the release." %}</li>
             </ul>
         <li>
-            {% trans "The release notes are maintained by the Operational IT team, so if you have comments or suggestions feel
-            free to <a href="mailto:operational-it@paylogic.com">contact them</a>." %}
+            {% trans 'The release notes are maintained by the Operational IT team, so if you have comments or suggestions feel free to <a href="mailto:operational-it@paylogic.com">contact them</a>.' %}
         </li>
     </ul>
     <br>
