--- a/pdt/templates/admin/core/release_notes/_single.html
+++ b/pdt/templates/admin/core/release_notes/_single.html
@@ -1,5 +1,6 @@
+{% load i18n %}
 <p style="font-style: italic">
-    Release {{ release.number }} is expected to go live on {{ release.datetime|date:"M d, Y" }}.
+    {% blocktrans with release_number=release.number release_date=release.datetime|date:"M d, Y" %}Release {{ release_number }} is expected to go live on {{ release_date }}.{% endblocktrans %}
     {{ release.description | safe }}
 </p>
 {% for category in categories %}
@@ -8,7 +9,7 @@
         <br />
         {% for case in category.cases %}
             {% if case.unmerged %}<span style="text-decoration: line-through">{% endif %}
-            <a target="_blank" href="https://case.paylogic.eu/fogbugz/?{{ case.id }}">Case {{ case.id }}</a> - {{ case.title }}
+            <a target="_blank" href="https://case.paylogic.eu/fogbugz/?{{ case.id }}">{% trans 'Case' %} {{ case.id }}</a> - {{ case.title }}
             {% if case.unmerged %}</span>{% endif %}
             <br>
         {% endfor %}
