--- a/pdt/templates/admin/core/release_notes/_single.html
+++ b/pdt/templates/admin/core/release_notes/_single.html
@@ -14,7 +14,7 @@
     <strong>{{ category.title }}:</strong><br>
         {% for case in category.cases %}
             {% if case.unmerged %}<span style="text-decoration: line-through">{% endif %}
-            <a target="_blank" href="https://case.paylogic.eu/fogbugz/?{{ case.id }}">{% trans 'Case' %} {{ case.id }}</a> - {{ case.title }}
+            <a target="_blank" href="{{ case.url | urlencode }}">{% trans 'Case' %} {{ case.id }}</a> - {{ case.title }}
             {% if case.unmerged %}</span>{% endif %}
             <br>
         {% endfor %}
