--- a/pdt/templates/admin/core/release_notes/overview.html
+++ b/pdt/templates/admin/core/release_notes/overview.html
@@ -15,7 +15,7 @@
                 {% endfor %}
             </ul>
         </li>
-        {{ settings.RELEASE_NOTES_DISCLAIMER }}
+        {{ settings.RELEASE_NOTES_DISCLAIMER|safe }}
     </ul>
     <br>
     {% for release, note in notes %}
